# aiuda-flow

./: .env.example  .gitignore  README.md  pyproject.toml
aiuda_flow/: __init__.py  cli.py
aiuda_flow/adapters/: __init__.py  api.py  local.py  mcp.py
aiuda_flow/core/: __init__.py  graph.py  node.py  state.py
aiuda_flow/observe/: __init__.py  phoenix.py
aiuda_flow/skills/: __init__.py  loader.py  node.py  registry.py
demo/: api_server.py  research_pipeline.py  skills_pipeline.py  ui_mockup.html
skills-registry/example-skills/: 01_researcher.yaml  02_analyst.md  03_writer.yaml
